# openmp

./: .gitignore  CMakeLists.txt  integral.h  main.cpp  max.h  maxmin.h  scalar_product.h  utils.cpp  utils.h
